--- a/desafios/dremidosX/style.css
+++ b/desafios/dremidosX/style.css
@@ -41,6 +41,9 @@ body {
     background-color: #B3C4F4;
     font-family: Arial, Helvetica;
     background-image: url(transmissão.gif);
+    background-size: 1900px 1900px;
+    background-repeat: no-repeat;
+    height: 98vh;
 }
 
 header {
